# tauri-plugin-clerk

./: .gitignore  .oxlintrc.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  package.json  tsconfig.json  tsdown.config.ts
.github/workflows/: checks.yml
dist-js/: index.d.ts  index.js
examples/react-example/: README.md  package.json  vite.config.ts
examples/react-example/src/: App.tsx  main.tsx
examples/react-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-example/src-tauri/capabilities/: default.json
examples/react-example/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: clerk-utils.ts  index.ts  logger.ts  patching.ts  sync.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_client_authorization_header.toml  set_client_authorization_header.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  events.rs  lib.rs  mobile.rs  models.rs  tauri_store.rs
