[package]
name = "tauri-plugin-clerk"
version = "0.1.0"
authors = ["@Nipsuli"]
homepage = "https://github.com/Nipsuli/tauri-plugin-clerk/"
repository = "https://github.com/Nipsuli/tauri-plugin-clerk/"
description = "An unofficial Tauri SDK for the Clerk REST Frontend API"
edition = "2021"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-clerk"

[dependencies]
tauri = { version = "2.4.1" }
serde = "1.0"
thiserror = "2"
clerk-fapi-rs = { git = "https://github.com/Nipsuli/clerk-fapi-rs", rev = "286b3f709ecc2c99bb55ee6aaa13901a401177da" }
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.41"
parking_lot = "0.12"
tauri-plugin-http = { version = "2.4", features = ['unsafe-headers'] }
serde_json = "1.0.140"
log = "0.4"
tauri-plugin-store = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }
