[package]
name = "tauri-plugin-clerk"
version = "0.1.0"
authors = ["@Nipsuli"]
homepage = "https://github.com/Nipsuli/tauri-plugin-clerk/"
repository = "https://github.com/Nipsuli/tauri-plugin-clerk/"
description = "An unofficial Tauri SDK for Clerk"
keywords = ["clerk", "tauri", "auth", "frontend"]
edition = "2021"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-clerk"
license = "MIT"

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "2"
clerk-fapi-rs = "0.2.0"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1.41"
parking_lot = "0.12"
tauri-plugin-http = { version = "2.4", features = ['unsafe-headers'] }
serde_json = "1.0.140"
log = "0.4"
tauri-plugin-store = "2"

[build-dependencies]
tauri-plugin = { version = "2.1.1", features = ["build"] }
